--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="profile">
             <img src="images/Profile-Pic.png" alt="Profile-Pic">
             <h2>Hi!!.</h2>
-            <p>I am working as a Project Engineer in Wipro Technologies</p>
+            <p class="intro">I am working as a Project Engineer in Wipro Technologies</p>
         </div>
         <hr>
         <div class="skills">
@@ -48,7 +48,7 @@
         <div class="contact-me">
             <h2>Get In Touch</h2>
             <h3>Details down below.</h3>
-            <p>Want to get in touch with me? Here are my details feel free to buzz me.</p>
+            <p class="contact-description">Want to get in touch with me? Here are my details feel free to buzz me.</p>
             <a class="btn" href="mailto:vishad1710@gmail.com">CONTACT ME</a>
         </div>
     </div>
@@ -58,7 +58,7 @@
         <a class="footer-link" href="https://www.linkedin.com/in/vishad-saxena-54a4655a">LinkedIn</a>
         <a class="footer-link" href="https://twitter.com/17Bageera">Twitter</a>
         <a class="footer-link" href="https://github.com/VishadSaxena">Github</a>
-        <p>© Vishad 2022.</p>
+        <p class="copyright">© Vishad 2022.</p>
     </div>
 
 </body>
